# azure-lotus

./: .gitignore  .sample.env  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .gitignore  .sample.env  Dockerfile  SCHEMA_VERIFICATION.md  alembic.ini  pyproject.toml  requirements.txt  test_schema.sh  verify_schema.sql
backend/src/: Dockerfile  main.py
backend/src/core/: openapi.py  setting.py
backend/src/core/auth/: auth.py  security.py
backend/src/core/database/: base.py  session.py
backend/src/core/middleware/: jwt_auth.py
backend/src/features/alerts/: alerts.py  models.py  routers.py  routes.py  services.py
backend/src/features/checkins/: models.py  routers.py  services.py
backend/src/features/family/: model.py
backend/src/features/home/: routers.py
backend/src/features/invitations/: models.py
backend/src/features/relationships/: models.py  routers.py  services.py
backend/src/features/seniors/: middleware.py  models.py  seniors.py
backend/src/features/users/: models.py  utils.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 481bf7833896_merge_completed_at_and_checkin_time_.py  4972b1566e28_initial_schema.py  55d252830e2e_merge_two_heads.py  5696fe8a5b92_create_alerts_table.py  9a3e80973ae9_refactor_ticket_system.py  a3f8d2e1b7c9_drop_priority_from_relationships.py  e8ec1cc60474_.py  (+7 more)
backend/src/scripts/: format.py  seed.py
backend/src/shared/: api_response.py  email_service.py  enums.py  exceptions.py  filter_commands.py  scheduler.py
backend/src/test/: conftest.py  test_checkins.py
(+98 files in other folders)
