[project]
name = "azure-lotus"
version = "0.1.0"
description = "Senior check-in and care coordination API built with FastAPI"
readme = "README.md"
requires-python = ">=3.9"

authors = [

]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlmodel>=0.0.32",
  "psycopg2-binary",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.1",
  "apscheduler>=3.10.4",
  "loguru>=0.7.2",
  "fastapi-mail>=1.4.1",
  "bcrypt>=5.0.0",
  "pyjwt>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5",
  "httpx>=0.26.0",
  "ruff>=0.3.0",
  "black>=24.2.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "isort>=6.1.0"
]

[tool.mypy]
python_version = "3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.alembic]
script_location = "migrations"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '''
  src/migrations
'''

[tool.isort]
skip_glob = ["/src/migrations/*"]

[project.scripts]
format = "scripts.format:run"
